--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,14 @@
         <!-- Disable animations between activities -->
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowBackground">@color/transparent_color</item>
-
+        <item name="android:windowFullscreen">false</item>
         <!-- Android theme override -->
         <item name="android:scrollbarThumbVertical">@color/light_grey_color</item>
         <item name="colorAccent">@color/primary_color</item>
         <item name="colorPrimary">@color/primary_color</item>
         <item name="android:colorPrimary">@color/primary_color</item>
         <!-- Comment out the following line to disable system's status bar coloring -->
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
         <item name="android:colorPrimaryDark">@color/primary_dark_color</item>
         <item name="android:navigationBarColor">@color/voip_dark_color</item>
 
