--- a/app/src/main/res/drawable/call.xml
+++ b/app/src/main/res/drawable/call.xml
@@ -7,6 +7,7 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@color/green_color" />
                     <stroke android:width="2dp" android:color="@color/grey_color" />
+                <corners android:radius="16dp" />
                 </shape>
             </item>
         </layer-list>
@@ -19,6 +20,7 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@color/green_color" />
                     <stroke android:width="2dp" android:color="@color/grey_color" />
+                    <corners android:radius="16dp" />
                 </shape>
             </item>
         </layer-list>
@@ -31,6 +33,7 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@color/primary_color" />
                     <stroke android:width="5dp" android:color="@color/white_color" />
+                    <corners android:radius="16dp" />
                 </shape>
             </item>
         </layer-list>
