--- a/app/src/main/res/layout/fragment_dialer.xml
+++ b/app/src/main/res/layout/fragment_dialer.xml
@@ -1,127 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View"/>
-        <variable
-            name="viewModel"
-            type="com.naminfo.cdot_vc.activities.main.dialer.DialerViewModel"/>
+        <variable name="selectCountryClickListener" type="android.view.View.OnClickListener"/>
+        <variable name="newContactClickListener" type="android.view.View.OnClickListener"/>
+        <variable name="newConferenceClickListener" type="android.view.View.OnClickListener"/>
+        <variable name="transferCallClickListener" type="android.view.View.OnClickListener"/>
+        <variable name="viewModel" type="com.naminfo.cdot_vc.activities.main.dialer.DialerViewModel"/>
     </data>
 
-    <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom">
-
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/mobion"
-        android:src="@drawable/mobion_icon"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:padding="10dp"
-        android:textAllCaps="true" />
-    <RelativeLayout
-        android:id="@+id/address_bar"
-        android:layout_below="@+id/image1"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/main_activity_top_bar_size"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:background="?attr/lightToolbarBackgroundColor">
+        android:layout_height="match_parent"
+        android:background="?attr/colorSurface"
+        android:padding="16dp"
+        tools:context=".DialerFragment">
 
-        <ImageView
-            android:id="@+id/erase"
-            android:contentDescription="@string/content_description_dialer_erase"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:focusableInTouchMode="true"
-            android:src="@drawable/backspace" />
-        <!--  android:inputType="textEmailAddress|textUri|textNoSuggestions"-->
-        <EditText
-            android:id="@+id/sip_uri_input"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/erase"
-            android:clickable="false"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
-            android:cursorVisible="true"
-            android:inputType="none"
+        <!-- 3D Logo Card -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/logoCard"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="8dp"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="@color/white_color">
 
-            android:longClickable="false"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:background="@color/transparent_color"
-            android:backgroundTint="@color/transparent_color"
+            <ImageView
+                android:id="@+id/image1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:contentDescription="@string/mobion"
+                android:src="@drawable/mobion_icon"
+                android:scaleType="fitCenter"/>
+        </androidx.cardview.widget.CardView>
 
-            android:ellipsize="start"
-            android:hint="@string/hint_country"
-
-            android:paddingStart="20dp"
-            android:paddingEnd="5dp"
-            android:textColorHint="@color/grey_color"
-            android:textStyle="bold"
-            tools:ignore="TouchTargetSizeCheck"
-            android:autofillHints="" />
-
-
-    </RelativeLayout>
-    <include
-        layout="@layout/numpad"
-        android:layout_below="@+id/address_bar"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        app:keyListener="@{viewModel.onKeyClick}"/>
-
-    <LinearLayout
-        android:id="@+id/controls"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:layout_below="@+id/numpad">
-
-        <ImageView
+        <!-- Address Bar with 3D effect -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/addressCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:background="@drawable/call"
-            android:contentDescription="@string/content_description_start_call"
-            android:padding="12dp"
-            android:src="@drawable/call_audio_start"
-            android:onClick="@{() -> viewModel.startCall()}"
-            android:clickable="@{viewModel.isAudioClickable}"
-            android:focusable="@{viewModel.isAudioClickable}"
-            android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="2dp"
+            app:layout_constraintTop_toBottomOf="@id/logoCard"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
 
-        <ImageView
+            android:background="@color/white_color">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                >
+
+                <EditText
+                    android:id="@+id/sip_uri_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:padding="4dp"
+                    android:hint="@string/hint_country"
+                    android:clickable="false"
+                    android:focusableInTouchMode="true"
+                    android:focusable="true"
+                    android:cursorVisible="true"
+
+                    android:inputType="phone"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:text="@={viewModel.enteredUri}"
+                    android:background="@android:color/transparent"
+                    android:textColorHint="@color/grey_color"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/erase"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:imeOptions="actionDone"
+                    android:afterTextChanged="@{(text) -> viewModel.onAfterUriChanged(sipUriInput, text)}"
+                    android:beforeTextChanged="@{(text, start, count, after) -> viewModel.onBeforeUriChanged(sipUriInput, count, after)}"/>
+
+                <ImageView
+                    android:id="@+id/erase"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:padding="4dp"
+                    android:contentDescription="@string/content_description_dialer_erase"
+                    android:src="@drawable/backspace"
+                    android:onClick="@{() -> viewModel.eraseLastChar()}"
+                    android:onLongClick="@{() -> viewModel.eraseAll()}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Numpad -->
+        <include
+            android:id="@+id/numpad"
+            layout="@layout/numpad"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/addressCard"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="320dp"
+            android:layout_height="350dp"
+            app:keyListener="@{viewModel.onKeyClick}"/>
+
+        <!-- Control buttons in a 3D Card -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/controlsCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/call"
-            android:layout_weight="2"
-            android:src="@drawable/call_video_start"
-            android:contentDescription="@string/content_description_start_call"
-            android:padding="12dp"
-            android:onClick="@{() -> viewModel.startVideoCall()}"
-            android:clickable="@{viewModel.isVideoClickable}"
-            android:focusable="@{viewModel.isVideoClickable}"
-            android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"
-            tools:ignore="ImageContrastCheck" />
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/cdot_dialpad_box_outline"
+            android:padding="8dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/numpad">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:padding="4dp">
 
+                <ImageView
+                    android:id="@+id/btnConference"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/call"
+                    android:contentDescription="@string/content_description_create_conference"
+                    android:onClick="@{newConferenceClickListener}"
+                    android:padding="8dp"
+                    android:src="@drawable/icon_video_conf_new"
+                    android:visibility="@{viewModel.scheduleConferenceAvailable ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/btnAudio"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.2" />
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/btnAudio"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/call"
+                    android:clickable="@{viewModel.isAudioClickable}"
+                    android:focusable="@{viewModel.isAudioClickable}"
+                    android:onClick="@{() -> viewModel.startCall()}"
+                    android:padding="12dp"
+                    android:src="@drawable/call_audio_start"
+                    android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/btnVideo"
+                    app:layout_constraintStart_toEndOf="@id/btnConference"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.2" />
 
+                <ImageView
+                    android:id="@+id/btnVideo"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/call"
+                    android:clickable="@{viewModel.isVideoClickable}"
+                    android:focusable="@{viewModel.isVideoClickable}"
+                    android:onClick="@{() -> viewModel.startVideoCall()}"
+                    android:padding="12dp"
+                    android:src="@drawable/call_video_start"
+                    android:visibility="@{viewModel.atLeastOneCall ? View.GONE : View.VISIBLE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/btnAddCall"
+                    app:layout_constraintStart_toEndOf="@id/btnAudio"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.2" />
 
+                <ImageView
+                    android:id="@+id/btnAddCall"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/call"
+                    android:onClick="@{() -> viewModel.startCall()}"
+                    android:padding="12dp"
+                    android:src="@drawable/call_add"
+                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; !viewModel.transferVisibility ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/btnTransfer"
+                    app:layout_constraintStart_toEndOf="@id/btnVideo"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.2" />
 
-</RelativeLayout>
+                <ImageView
+                    android:id="@+id/btnTransfer"
+                    android:layout_width="0dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/call"
+                    android:onClick="@{transferCallClickListener}"
+                    android:padding="12dp"
+                    android:src="@drawable/call_transfer"
+                    android:visibility="@{viewModel.atLeastOneCall &amp;&amp; viewModel.transferVisibility ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/btnAddCall"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
+
+
