--- a/app/src/main/res/layout/fragment_dialer.xml
+++ b/app/src/main/res/layout/fragment_dialer.xml
@@ -53,6 +53,7 @@
             android:layout_marginEnd="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="2dp"
+
             app:layout_constraintTop_toBottomOf="@id/logoCard"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:padding="8dp"
+
                 >
 
                 <EditText
@@ -71,10 +72,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="2dp"
-                    android:padding="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+
                     android:hint="@string/hint_country"
                     android:clickable="false"
                     android:focusableInTouchMode="true"
@@ -82,7 +83,7 @@
                     android:cursorVisible="true"
 
                     android:inputType="phone"
-                    android:textSize="22sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:text="@={viewModel.enteredUri}"
@@ -98,16 +99,24 @@
 
                 <ImageView
                     android:id="@+id/erase"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:padding="4dp"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     android:contentDescription="@string/content_description_dialer_erase"
-                    android:src="@drawable/backspace"
+
                     android:onClick="@{() -> viewModel.eraseLastChar()}"
                     android:onLongClick="@{() -> viewModel.eraseAll()}"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="2dp"
+                    android:scaleX="1.5"
+                    android:scaleY="1.5"
+                    android:src="@drawable/backspace"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintStart_toEndOf="@id/sip_uri_input"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -132,8 +141,11 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/cdot_dialpad_box_outline"
+            android:background="#CAFBF7"
+            app:cardBackgroundColor="#CAFBF7"
+            android:shadowColor="#C5DDDE"
             android:padding="8dp"
+
             app:cardCornerRadius="20dp"
             app:cardElevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +157,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:padding="4dp">
+                android:padding="4dp"
+
+                android:background="@drawable/cdot_dialpad_box_outline_primarycolor">
 
                 <ImageView
                     android:id="@+id/btnConference"
