--- a/app/src/main/res/xml/motion_main_activity_tabs_selector.xml
+++ b/app/src/main/res/xml/motion_main_activity_tabs_selector.xml
@@ -2,54 +2,72 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <!-- History → Contacts -->
     <Transition
-        motion:constraintSetStart="@id/history_set"
-        motion:constraintSetEnd="@id/contacts_set" />
+        motion:constraintSetStart="@+id/dialer"
+        motion:constraintSetEnd="@+id/chat_rooms"/>
 
-    <!-- History → Dialer -->
     <Transition
-        motion:constraintSetStart="@id/history_set"
-        motion:constraintSetEnd="@id/dialer_set" />
+        motion:constraintSetStart="@+id/call_history"
+        motion:constraintSetEnd="@+id/contacts"/>
 
-    <!-- Contacts → Dialer -->
     <Transition
-        motion:constraintSetStart="@id/contacts_set"
-        motion:constraintSetEnd="@id/dialer_set" />
+        motion:constraintSetStart="@+id/call_history"
+        motion:constraintSetEnd="@+id/dialer"/>
 
-    <!-- ===== Constraint Sets ===== -->
+    <Transition
+        motion:constraintSetStart="@+id/call_history"
+        motion:constraintSetEnd="@+id/chat_rooms"/>
 
-    <!-- Selector under History -->
-    <ConstraintSet android:id="@+id/history_set">
+    <Transition
+        motion:constraintSetStart="@+id/contacts"
+        motion:constraintSetEnd="@+id/dialer"/>
+
+    <Transition
+        motion:constraintSetStart="@+id/contacts"
+        motion:constraintSetEnd="@+id/chat_rooms"/>
+
+    <ConstraintSet android:id="@+id/call_history">
+
         <Constraint
             android:id="@id/selector"
-            android:layout_width="0dp"
             android:layout_height="@dimen/tabs_fragment_selector_size"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="@id/history"
-            motion:layout_constraintEnd_toEndOf="@id/history" />
+            motion:layout_constraintLeft_toLeftOf="parent"
+            motion:layout_constraintRight_toLeftOf="@id/guidelineLeft" />
+
     </ConstraintSet>
 
-    <!-- Selector under Contacts -->
-    <ConstraintSet android:id="@+id/contacts_set">
+    <ConstraintSet android:id="@+id/contacts">
+
         <Constraint
             android:id="@id/selector"
-            android:layout_width="0dp"
             android:layout_height="@dimen/tabs_fragment_selector_size"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="@id/contacts"
-            motion:layout_constraintEnd_toEndOf="@id/contacts" />
+            motion:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+            motion:layout_constraintRight_toLeftOf="@id/guidelineMiddle" />
+
     </ConstraintSet>
 
-    <!-- Selector under Dialer -->
-    <ConstraintSet android:id="@+id/dialer_set">
+    <ConstraintSet android:id="@+id/dialer">
+
         <Constraint
             android:id="@id/selector"
-            android:layout_width="0dp"
             android:layout_height="@dimen/tabs_fragment_selector_size"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="@id/dialer"
-            motion:layout_constraintEnd_toEndOf="@id/dialer" />
+            motion:layout_constraintLeft_toLeftOf="@id/guidelineMiddle"
+            motion:layout_constraintRight_toLeftOf="@id/guidelineRight" />
+
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/chat_rooms">
+
+        <Constraint
+            android:id="@id/selector"
+            android:layout_height="@dimen/tabs_fragment_selector_size"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintLeft_toLeftOf="@id/guidelineRight"
+            motion:layout_constraintRight_toRightOf="parent" />
+
     </ConstraintSet>
 
 </MotionScene>
